# StreamSwitch

./: .gitmodules  AUTHORS  CNAME  DEPENDS  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  index.html  params.json
controller/: readme
controller/python/: CHANGES.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  web_development.ini
controller/python/streamswitch/: __init__.py  _register.py  events.py  exceptions.py  port_mngr.py  process_mngr.py  sender_mngr.py  stream_mngr.py  utils.py
controller/python/streamswitch/control/: __init__.py  _register.py  port_mngr.py  stream_mngr.py
core/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
core/include/: stream_switch.h  stsw_arg_parser.h  stsw_defs.h  stsw_global.h  stsw_internals.h  stsw_lock_guard.h  stsw_receiver_listener.h  stsw_rotate_logger.h  stsw_sink_listener.h  stsw_stream_receiver.h  stsw_stream_sink.h  stsw_stream_source.h
core/protocol/: pb_client_heartbeat.proto  pb_client_list.proto  pb_media.proto  pb_media_statistic.proto  pb_metadata.proto  pb_packet.proto  pb_stream_info.proto
core/samples/: Makefile.am  Makefile.in  api_test_sink.cc  file_live_source.cc  rotate_logger_test.cc  text_sink.cc
core/src/: pb_client_heartbeat.pb.cc  pb_media.pb.h  pb_metadata.pb.cc  pb_metadata.pb.h  stsw_arg_parser.cc  stsw_global.cc  stsw_rotate_logger.cc  stsw_stream_receiver.cc  stsw_stream_sink.cc  stsw_stream_source.cc
core/src/pb/: pb_client_heartbeat.pb.cc  pb_client_heartbeat.pb.h  pb_client_list.pb.h  pb_media.pb.cc  pb_media_statistic.pb.cc  pb_media_statistic.pb.h  pb_metadata.pb.cc  pb_metadata.pb.h  pb_packet.pb.cc  pb_packet.pb.h  pb_stream_info.pb.cc  pb_stream_info.pb.h
downloads/: netembryo-0.1.1.tar.bz2
libstreamswitch/: Makefile.am  Makefile.in  README  libstreamswitch.pc.in
libstreamswitch/include/: stream_switch.h  stsw_arg_parser.h  stsw_defs.h  stsw_global.h  stsw_lock_guard.h  stsw_rotate_logger.h  stsw_sink_listener.h  stsw_source_listener.h  stsw_stream_sink.h  stsw_stream_source.h
libstreamswitch/protocol/: pb_client_heartbeat.proto  pb_media_statistic.proto  pb_metadata.proto  pb_packet.proto  pb_stream_info.proto
libstreamswitch/samples/: Makefile.am  Makefile.in  api_test_sink.cc  file_live_source.cc  rotate_logger_test.cc  text_sink.cc
libstreamswitch/src/: stsw_arg_parser.cc  stsw_global.cc  stsw_rotate_logger.cc  stsw_stream_sink.cc  stsw_stream_source.cc
libstreamswitch/src/pb/: pb_client_heartbeat.pb.cc  pb_client_heartbeat.pb.h  pb_client_list.pb.cc  pb_media_statistic.pb.cc  pb_media_statistic.pb.h  pb_packet.pb.cc  pb_packet.pb.h  pb_stream_info.pb.cc  pb_stream_info.pb.h
ports/: readme
ports/stsw_rtsp_port/: Makefile.am  Makefile.in  README.md
ports/stsw_rtsp_port/src/: Makefile.am  Makefile.in  bufferqueue.c  bufferqueue.h  config.h  feng.h  feng_utils.h  fnc_log.cc  fnc_log.h  incoming.c  incoming.h  main.cc  parse_args.cc
recorders/: readme
scripts/: stsw_net_set.sh  stsw_sys_set.sh
senders/: readme
senders/ffmpeg_sender/: Makefile.am  Makefile.in  README.md
senders/ffmpeg_sender/src/: stsw_cached_segment.c  stsw_cached_segment.h  stsw_ffmpeg_muxer.cc  stsw_ffmpeg_muxer.h  stsw_ffmpeg_muxer_sender.cc  stsw_ffmpeg_muxer_sender.h  stsw_ffmpeg_sender_arg_parser.cc  stsw_ffmpeg_sender_arg_parser.h  stsw_ffmpeg_sender_global.h  stsw_log.cc  stsw_log.h  stsw_main.cc
senders/ffmpeg_sender/src/parsers/: dec_sps.cc  dec_sps.h  stsw_aac_mux_parser.cc  stsw_aac_mux_parser.h  stsw_h264or5_mux_parser.cc  stsw_h264or5_mux_parser.h  stsw_mpeg4_video_mux_parser.cc  stsw_mpeg4_video_mux_parser.h  stsw_stream_mux_parser.cc  stsw_stream_mux_parser.h
senders/ffmpeg_sender/src/seg_writers/: cseg_dummy_writer.c  cseg_file_writer.c  cseg_ivr_writer.c
senders/segment_sender/: Makefile.am  README.md
senders/segment_sender/src/: stsw_ffmpeg_segmenter.cc  stsw_ffmpeg_segmenter.h  stsw_log.cc  stsw_log.h  stsw_segment_sender.cc  stsw_segment_sender.h  stsw_segment_sender_arg_parser.cc  stsw_segment_sender_global.h
sources/: readme
sources/ffmpeg_demuxer_source/: Makefile.am  Makefile.in  README.md
sources/ffmpeg_demuxer_source/src/: stsw_ffmpeg_arg_parser.cc  stsw_ffmpeg_arg_parser.h  stsw_ffmpeg_demuxer.cc  stsw_ffmpeg_demuxer.h  stsw_ffmpeg_demuxer_source.cc  stsw_ffmpeg_demuxer_source.h  stsw_ffmpeg_source_global.h  stsw_log.cc  stsw_log.h  stsw_main.cc
sources/ffmpeg_demuxer_source/src/parser/: stsw_h264or5_parser.cc  stsw_h264or5_parser.h  stsw_mpeg4_parser.cc  stsw_mpeg4_parser.h  stsw_stream_parser.cc  stsw_stream_parser.h
sources/ffmpeg_source/: Makefile.in
sources/ffmpeg_source/src/: stsw_ffmpeg_arg_parser.cc  stsw_ffmpeg_arg_parser.h  stsw_ffmpeg_demuxer.h  stsw_ffmpeg_source.h  stsw_log.cc  stsw_log.h  stsw_main.cc
sources/stsw_proxy_source/: Makefile.in
sources/stsw_proxy_source/src/: stsw_log.cc  stsw_log.h  stsw_main.cc  stsw_stream_proxy.cc  stsw_stream_proxy.h  url.h
sources/stsw_rtmp_source/: Makefile.am  Makefile.in
sources/stsw_rtmp_source/src/: stsw_rtmp_main.cc  stsw_rtmp_source.cc  stsw_rtmp_source.h
sources/stsw_rtsp_source/: Makefile.am  Makefile.in  README.md
sources/stsw_rtsp_source/live/: Makefile.tail  README.stsw  VERSION  config.linux-with-shared-libraries  config.stream-switch  genMakefiles  genMakefiles.stream_switch
sources/stsw_rtsp_source/live/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
sources/stsw_rtsp_source/live/UsageEnvironment/include/: UsageEnvironment_version.hh
sources/stsw_rtsp_source/live/groupsock/include/: groupsock_version.hh
sources/stsw_rtsp_source/live/liveMedia/: RTSPClient.cpp
sources/stsw_rtsp_source/live/liveMedia/include/: RTPSource.hh  liveMedia_version.hh
sources/stsw_rtsp_source/src/: stsw_h264or5_output_sink.cc  stsw_h264or5_output_sink.h  stsw_main.cc  stsw_mpeg4_output_sink.cc  stsw_mpeg4_output_sink.h  stsw_output_sink.cc  stsw_output_sink.h  stsw_pts_normalizer.cc  stsw_pts_normalizer.h  stsw_rtsp_client.cc  stsw_rtsp_client.h  stsw_rtsp_source_app.cc  stsw_rtsp_source_app.h
(+135 files in other folders)
